the last update

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,14 @@ header {
   margin-top: 15px;
 }
 
+#select {
+  width: 180px;
+  height: 50px;
+  border-radius: 8px;
+  text-align: left;
+  padding-left: 6px;
+}
+
 #darkimg {
   width: 15px;
 }
